# distall

./: .gitignore  Cargo.toml  README.md  bundler.toml
.github/workflows/: release.yml
src/: distortions.rs  filters.rs  lib.rs  oversamplers.rs  utils.rs
src/editor/: components.rs  gui.rs  mod.rs  style.css  style.rs  theme.css
src/editor/widgets/: categorical_picker.rs  mod.rs
src/gui/: editor.rs  mod.rs  state.rs  theme.css
test/reaper/: test.RPP
test/reaper/Media/peaks/: alto.wav.reapeaks  alto_biquad_filter.wav.reapeaks
